--- a/css/main.scss
+++ b/css/main.scss
@@ -38,6 +38,7 @@ $table-font-size: 12px;
 
 $text-color: #666;
 $image-opacity: 0.9;
+$header-image-height: 300px;
 
 /* Set theme color *************************/
 $theme-color: $blue;
